--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<meta name="application-name" content="MOKOLÉ">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-title" content="MOKOLÉ">
+	    <meta property="og:title" content="MOKOLÉ - Le jeu de lettres">
+	    <meta property="og:description" content="MOKOLÉ est un jeu de lettres où il faut deviner les douze lettres formant une grille colorée de six mots.">
 		<meta property="og:image" content="/img/mokole-preview.png">
 		<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
