--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="fr">
 	<head>
 	    <meta charset="utf-8">
-	    <title>MOKOLÉ - Le jeu de lettres</title>
+	    <title>MOKOLÉ - Jeu de lettres gratuit en ligne</title>
 	    <meta name="description" content="MOKOLÉ est un jeu de lettres où il faut deviner les douze lettres formant une grille colorée de six mots.">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="application-name" content="MOKOLÉ">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-title" content="MOKOLÉ">
-	    <meta property="og:title" content="MOKOLÉ - Le jeu de lettres">
+	    <meta property="og:title" content="MOKOLÉ - Jeu de lettres gratuit en ligne">
 	    <meta property="og:description" content="MOKOLÉ est un jeu de lettres où il faut deviner les douze lettres formant une grille colorée de six mots.">
 		<meta property="og:image" content="/img/mokole-preview.png">
 		<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
