Change fonts in grid

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 			    padding-top: 0.5vmin;
 		    }
 		    .grille {
-			    font-family: "myFont";
+/* 			    font-family: "myFont"; */
+			    font-family: Arial, Helvetica, sans-serif;
 			    margin: 0px auto;
 			    border-spacing: 1px;
 			    border-collapse: separate;
@@ -169,6 +170,7 @@
 			    font-size: 7vmin;
 			    line-height: 3.5vmin;
 			    color: white;
+			    font-weight: bold;
 		    }
 		    #lettres td {
 			    color: black;
