--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 			    margin-right: 1em;
 		    }
 		    .volume {
+			    font-family: Arial, Helvetica, sans-serif;
 			    background-color: transparent;
 			    background-image: url('/img/soundon.png');
 			    background-repeat: no-repeat;
@@ -351,7 +352,133 @@
 				max-width: 100%;
 				height: auto;
 				width: auto\9; /* IE8 */
-			}			
+			}
+			/**
+			 * Tooltip Styles
+			 */
+			
+			/* Base styles for the element that has a tooltip */
+			[data-tooltip],
+			.tooltip {
+			  position: relative;
+			  cursor: pointer;
+			}
+			
+			/* Base styles for the entire tooltip */
+			[data-tooltip]:before,
+			[data-tooltip]:after,
+			.tooltip:before,
+			.tooltip:after {
+			  position: absolute;
+			  visibility: hidden;
+			  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+			  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+			  opacity: 0;
+			  -webkit-transition: 
+			      opacity 0.2s ease-in-out,
+			        visibility 0.2s ease-in-out,
+			        -webkit-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+			    -moz-transition:    
+			        opacity 0.2s ease-in-out,
+			        visibility 0.2s ease-in-out,
+			        -moz-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+			    transition:         
+			        opacity 0.2s ease-in-out,
+			        visibility 0.2s ease-in-out,
+			        transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+			  -webkit-transform: translate3d(0, 0, 0);
+			  -moz-transform:    translate3d(0, 0, 0);
+			  transform:         translate3d(0, 0, 0);
+			  pointer-events: none;
+			}
+			
+			/* Show the entire tooltip on hover and focus */
+			[data-tooltip]:hover:before,
+			[data-tooltip]:hover:after,
+			[data-tooltip]:focus:before,
+			[data-tooltip]:focus:after,
+			.tooltip:hover:before,
+			.tooltip:hover:after,
+			.tooltip:focus:before,
+			.tooltip:focus:after {
+			  visibility: visible;
+			  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+			  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+			  opacity: 1;
+			}
+			
+			/* Base styles for the tooltip's directional arrow */
+			.tooltip:before,
+			[data-tooltip]:before {
+			  z-index: 1001;
+			  border: 6px solid transparent;
+			  background: transparent;
+			  content: "";
+			}
+			
+			/* Base styles for the tooltip's content area */
+			.tooltip:after,
+			[data-tooltip]:after {
+			  z-index: 1000;
+			  padding: 8px;
+			  width: 160px;
+			  background-color: #000;
+			  background-color: hsla(0, 0%, 20%, 0.9);
+			  color: #fff;
+			  content: attr(data-tooltip);
+			  font-size: 14px;
+			  line-height: 1.2;
+			  text-align: center;
+			}
+			
+			/* Horizontally align top/bottom tooltips */
+			[data-tooltip]:after,
+			.tooltip:after,
+			.tooltip-top:after {
+			  margin-left: -80px;
+			}
+			
+			[data-tooltip]:hover:before,
+			[data-tooltip]:hover:after,
+			[data-tooltip]:focus:before,
+			[data-tooltip]:focus:after,
+			.tooltip:hover:before,
+			.tooltip:hover:after,
+			.tooltip:focus:before,
+			.tooltip:focus:after,
+			.tooltip-top:hover:before,
+			.tooltip-top:hover:after,
+			.tooltip-top:focus:before,
+			.tooltip-top:focus:after {
+			  -webkit-transform: translateY(-12px);
+			  -moz-transform:    translateY(-12px);
+			  transform:         translateY(-12px); 
+			}
+			
+			/* Bottom */
+			.tooltip-bottom:before,
+			.tooltip-bottom:after {
+			  top: 100%;
+			  bottom: auto;
+			  left: 50%;
+			}
+			
+			.tooltip-bottom:before {
+			  margin-top: -12px;
+			  margin-bottom: 0;
+			  border-top-color: transparent;
+			  border-bottom-color: #000;
+			  border-bottom-color: hsla(0, 0%, 20%, 0.9);
+			}
+			
+			.tooltip-bottom:hover:before,
+			.tooltip-bottom:hover:after,
+			.tooltip-bottom:focus:before,
+			.tooltip-bottom:focus:after {
+			  -webkit-transform: translateY(12px);
+			  -moz-transform:    translateY(12px);
+			  transform:         translateY(12px); 
+			}
 		</style>
 		<script type="text/javascript">
 			if (!String.prototype.format) {
@@ -552,13 +679,13 @@
 				if (sounds == 'on') {
 					sounds = 'off';
 					document.getElementById('sounds').style.backgroundImage = "url('/img/soundoff.png')";
-					document.getElementById('sounds').title = "Remettre le son";
+					document.getElementById('sounds').dataset.tooltip = "Remettre le son";
 					localStorage.setItem('sounds', 'off');
 					ga('send', 'event', 'Toggle sounds', 'Mute');
 				} else {
 					sounds = 'on';
 					document.getElementById('sounds').style.backgroundImage = "url('/img/soundon.png')";
-					document.getElementById('sounds').title = "Couper le son";
+					document.getElementById('sounds').dataset.tooltip = "Couper le son";
 					localStorage.removeItem('sounds');					
 					ga('send', 'event', 'Toggle sounds', 'Unmute');
 				}
@@ -660,10 +787,10 @@
 		<div class="main">
 			<div id="topbar">
 			    <span class="left">MOKOLÉ</span>
-			    <span id="sounds" class="left volume" onclick="toggle_sounds()" title="Couper le son"></span>
-		        <span id="lifes" class="lifes right" title="Nombre de vies restantes">5</span>
-		        <span id="score" class="score right" title="Score actuel">0</span>
-		        <span id="highscore" class="right highscore" title="Meilleur score">0</span>
+			    <span id="sounds" class="left volume tooltip-bottom" onclick="toggle_sounds()" data-tooltip="Couper le son"></span>
+		        <span id="lifes" class="lifes right tooltip-bottom" data-tooltip="Nombre de vies restantes">5</span>
+		        <span id="score" class="score right tooltip-bottom" data-tooltip="Votre score actuel">0</span>
+		        <span id="highscore" class="right highscore tooltip-bottom" data-tooltip="Votre meilleur score">0</span>
 			</div>
 			<div class="board">
 				<div id="before-game">
