Removed tooltips on focus

--- a/index.html
+++ b/index.html
@@ -396,12 +396,8 @@
 			/* Show the entire tooltip on hover and focus */
 			[data-tooltip]:hover:before,
 			[data-tooltip]:hover:after,
-			[data-tooltip]:focus:before,
-			[data-tooltip]:focus:after,
 			.tooltip:hover:before,
-			.tooltip:hover:after,
-			.tooltip:focus:before,
-			.tooltip:focus:after {
+			.tooltip:hover:after {
 			  visibility: visible;
 			  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 			  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
@@ -441,16 +437,10 @@
 			
 			[data-tooltip]:hover:before,
 			[data-tooltip]:hover:after,
-			[data-tooltip]:focus:before,
-			[data-tooltip]:focus:after,
 			.tooltip:hover:before,
 			.tooltip:hover:after,
-			.tooltip:focus:before,
-			.tooltip:focus:after,
 			.tooltip-top:hover:before,
-			.tooltip-top:hover:after,
-			.tooltip-top:focus:before,
-			.tooltip-top:focus:after {
+			.tooltip-top:hover:after {
 			  -webkit-transform: translateY(-12px);
 			  -moz-transform:    translateY(-12px);
 			  transform:         translateY(-12px); 
@@ -473,9 +463,7 @@
 			}
 			
 			.tooltip-bottom:hover:before,
-			.tooltip-bottom:hover:after,
-			.tooltip-bottom:focus:before,
-			.tooltip-bottom:focus:after {
+			.tooltip-bottom:hover:after {
 			  -webkit-transform: translateY(12px);
 			  -moz-transform:    translateY(12px);
 			  transform:         translateY(12px); 
