Home's ad changed

--- a/index.html
+++ b/index.html
@@ -830,7 +830,16 @@
 					<p>Quand une grille est complétée, vous touchez un bonus de fin de partie égal à votre nombre de vies et vous gagnez une vie supplémentaire.</p>
 					<p>Le jeu se termine lorsque vous n'avez plus de vie.</p>
 					<center>
-						<a href="http://www.tarot-amoureux.com/?idw=1451" target="_blank" rel="nofollow" onclick="ga('send', 'event', 'Outbound Link', 'click', this.href);"><img class="fixed-ratio-resize" src="/img/tarotamoureux.gif"></a> 
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- MOKOLE -->
+						<ins class="adsbygoogle"
+						     style="display:block"
+						     data-ad-client="ca-pub-8237054068776864"
+						     data-ad-slot="9164368102"
+						     data-ad-format="auto"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
 					</center>
 					<h3>Astuces et informations sur MOKOLÉ</h3>					
 					<p>Vous pouvez utiliser la souris ou le clavier pendant le jeu (appuyez sur la touche "entrée" pour passer à la grille suivante ou refaire une partie).</p>
