Update twitter image

--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
 					</div>
 					<center>
 						<a id="share-facebook" class="button facebook tooltip-bottom" rel="nofollow" target="_blank" href="http://www.facebook.com/sharer.php?display=popup&u=http%3A%2F%2Fmokole.com%2F&t={0}" data-tooltip="Partager sur Facebook" onclick="handle_social_click('Facebook', 'Share')"></a>
-						<a id="share-twitter" class="button twitter tooltip-bottom" rel="nofollow" target="_blank" href="https://twitter.com/share?original_referer=http%3A%2F%2Fmokole.com%2F&source=tweetbutton&text={0}%20https%3A%2F%2Fpic.twitter.com%2Fk0ch4kQXY1&url=http%3A%2F%2Fmokole.com%2F&hashtags=MOKOLE&via=Elodie_Mokole" data-tooltip="Partager sur Twitter" onclick="handle_social_click('Twitter', 'Share')"></a>
+						<a id="share-twitter" class="button twitter tooltip-bottom" rel="nofollow" target="_blank" href="https://twitter.com/share?original_referer=http%3A%2F%2Fmokole.com%2F&source=tweetbutton&text={0}%20https%3A%2F%2Fpic.twitter.com%2Fl5W4yJ7mYc&url=http%3A%2F%2Fmokole.com%2F&hashtags=MOKOLE&via=Elodie_Mokole" data-tooltip="Partager sur Twitter" onclick="handle_social_click('Twitter', 'Share')"></a>
 						<a id="share-googleplus" class="button googleplus tooltip-bottom" rel="nofollow" target="_blank" href="https://plus.google.com/share?url=http%3A%2F%2Fmokole.com&t={0}" data-tooltip="Partager sur Google Plus"onclick="handle_social_click('Google+', 'Share')"></a>
 						<a id="share-email" class="button email tooltip-bottom" rel="nofollow" target="_blank" href="mailto:?subject={0}&body=http%3A%2F%2Fmokole.com%2F" data-tooltip="Partager par email" onclick="handle_social_click('Email', 'Share')"></a>
 					</center>
