Copyright to mokole.com

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
 				</div>
 			</div>
 			<div id="bottombar">
-				&copy;2017 <a href="http://cravatek.com/" onclick="ga('send', 'event', 'Outbound Link', 'click', this.href, {transport: 'beacon'});">CRAVATEK LTD</a>
+				&copy;2017 <a href="http://mokole.com/">MOKOLE.COM</a>
 			</div>
 		</div>
 		<script type="text/javascript">
