--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			    font-family: "myFont";
 			    src: url("/fonts/font1.ttf");
 		    }
-		    @media screen and (max-width: 990px) {
+		    @media screen and (max-aspect-ratio: 12/11) {
 			    .hidden-mobile {
 				    display: none !important;
 			    }
